# testFixConnection

./: Makefile  Makefile.main.cpp  README.md  gui.cpp  idx.cpp  main.cpp  main2.cpp  printSoh.cpp  run.sh  tesFileCustom.cpp  tesGui.cpp  tesSOH  tesdata  tesgui  teslog  test.cpp  testCustomFile  testTimeStamp.cpp  testdataMessage.cpp  testlog  testlog.cpp  textRunning.cpp
DataDictionary/: FIX50SP1-IDX.xml
TcpDumpFile/: capturePacket.txt  run.txt
backup/: CMakeLists.txt  Makefile.main.cpp  back.txt  main2.cpp  main3.cpp  test.cpp
conf/: cancel_negotwoside_inisiator.csv  mass_action.csv  mass_quote.csv  new_order.csv  ouchEngine.cfg  read.cnf  request_position.csv
filesmain/: CallStack.cpp  DataDictionary.cpp  FieldMap.cpp  FieldTypes.cpp  Group.cpp  IDXMessage.cc  IDXUtil.cc  LIBXML_DOMDocument.cpp  Message.cpp  MessageSorters.cpp  TcpClient.cc  Utility.cpp
header/: FixTcp.h
inc/: FileCustom.hpp  GuiConsole.hpp  IDXMessage.cc  IDXUtil.cc  IDXUtil.h  Schedule.hpp  WriteLog.hpp  color.hpp  constant.hpp  netstat  netstat.hpp  parser.hpp  proses.hpp  sendOncsv.hpp  testFileCustom
include/: DataDictionary.h  FieldMap.h  FixValues.h  IDX.h  IDXCallback.h  IDXConstants.h  IDXMessage.h  IDXUtil.h  MarketDataRequest.h  Message.h  MessageSorters.h  TcpBase.h  TcpClient.h  md5.hpp
ouchEngine/: AESRijndael.cc  AutoOrder.cc  BasketOrder.cc  CMCrypt.cc  CSemaphore.cc  ClientConverter.cc  ETFOrder.cc  GFile.cc  GPackage.cc  GPackage.cc.20231220  GQueue.cc  GSocket.cc  IPackage.cc  InlineOrder.cc  Itch.cc  ItchMap.cc  Makefile  OrderBookDirectory.cc  Ouch.cc  OuchEngine.cc  (+25 more)
(+66 files in other folders)
